# CrianexHub

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: sub-feature.md
.github/workflows/: ci.yml
backend/: eslint.config.js  package-lock.json  package.json  vitest.config.ts
documento_de_visao/: generate-pdf.js
documento_de_visao/arquivos geradores/: a.md  b.md  d.md  e.md  g.md  h.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/messages/: en.json  pt.json
frontend/src/: app.css  app.html  hooks.server.ts
gh-pages/: .prettierignore  mkdocs.yml
gh-pages/docs/: index.md  referencias.md
gh-pages/docs/visao/: er.md  (+4 more)
gh-pages/docusaurus/: sidebars.ts
notify/: .env.example  Cargo.toml  Dockerfile
notify/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  realtime.rs
scripts/: test-rnf09-rls.sh
supabase/: seed.sql
supabase/migrations/: 20260524033437_profile_rls_policies.sql  20260524033920_profiles_trigger.sql  20260524201624_create_leads.sql  20260527000000_google_oauth_profiles_guard.sql  20260528000400_default_new_profiles_inactive.sql  20260528000500_force_new_profiles_inactive.sql  20260529180000_profiles_rls_and_schema_fix.sql  20260605000100_add_display_role_and_permissions.sql  20260607000100_add_product_url_to_products.sql  20260610000100_fix_faq_ratings_grants.sql  20260627000100_create_clients_and_client_cards.sql  20260628000100_create_notifications.sql  20260701000400_add_member_id_to_notifications.sql  20260718000100_notifications_realtime_notify.sql  (+2 more)
(+229 files in other folders)
