[package]
name = "crianex-notify"
version = "0.1.0"
edition = "2021"
description = "Microserviço de notificações do Crianex Hub (Rust/axum)"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
# Binário enxuto (prioridade: memória): LTO + strip + otimização por tamanho.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
